--- a/index.html
+++ b/index.html
@@ -122,11 +122,11 @@
                 <div class="about__data">
                     <p class="about__description">Soy un apasionado de la docencia así como de JavaScript y todo su
                         entorno.<br><br>
-                        Principalmente, trabajo el frontend con Vanilla JS y React y el backend con NodeJS, MongoDB y MySQL. <br><br>
+                        Trabajo el frontend, el backend y diseño bases de datos. <br><br>
                         Un código sin testing no es código, tan solo una declaración de intenciones.</p>
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">2</span>
+                            <span class="about__info-title">4</span>
                             <span class="about__info-name">Años <br> de experiencia</span>
                         </div>
                         <div>
@@ -209,7 +209,15 @@
                                     <span class="skills__percentage skills__js"></span>
                                 </div>
                             </div>
-
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Java</h3>
+                                    <span class="skills__number">80%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__java"></span>
+                                </div>
+                            </div>
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">TypeScript</h3>
@@ -247,7 +255,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Vue</h3>
-                                    <span class="skills__number">70%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__vue"></span>
@@ -257,7 +265,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Quasar</h3>
-                                    <span class="skills__number">70%</span>
+                                    <span class="skills__number">50%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__quasar"></span>
@@ -398,6 +406,7 @@
                 <div>
                     <!-- SKILLS 3 BACK-->
                     <div class="skills__content skills__close">
+
                         <div class="skills__header">
                             <i class="uil uil-server-network skills__icon"></i>
 
@@ -409,17 +418,30 @@
                             <i class="uil uil-angle-down skills__arrow"></i>
                         </div>
 
+
                         <div class="skills__list grid">
                             <span class="skills__subtitle"> Bases de Datos</span>
+
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">Diseño de bases de datos</h3>
+                                    <span class="skills__number">100%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__disenoBBDD"></span>
+                                </div>
+                            </div>
+
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">MySQL</h3>
-                                    <span class="skills__number">80%</span>
+                                    <span class="skills__number">100%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__mysql"></span>
                                 </div>
                             </div>
+
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">MongoDB</h3>
@@ -429,8 +451,24 @@
                                     <span class="skills__percentage skills__mongodb"></span>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="skills__list grid">
+                            <span class="skills__subtitle"> PHP Backend</span>
+                            <div class="skills__data">
+                                <div class="skills__titles">
+                                    <h3 class="skills__name">PHP</h3>
+                                    <span class="skills__number">80%</span>
+                                </div>
+                                <div class="skills__bar">
+                                    <span class="skills__percentage skills__php"></span>
+                                </div>
+                            </div>
+
 
                         </div>
+
+
                         <div class="skills__list grid">
                             <span class="skills__subtitle"> JavaScript Backend</span>
                             <div class="skills__data">
@@ -659,6 +697,23 @@
 
                         <!-- QUALIFICATION 1-->
                         <div class="qualification__data">
+                            <div>
+                                <h3 class="qualification__title">Analista programador
+                                </h3>
+                                <span class="qualification__subtitle">Consejería de Educación, Castilla y León</span>
+                                <div class="qualification__calendar">
+                                    <i class="uil uil-calendar-alt"></i>
+                                    Diciembre 2023 - Presente
+                                </div>
+                            </div>
+                            <div>
+                                <span class="qualification__rounder"></span>
+                                <span class="qualification__line"></span>
+                            </div>
+                        </div>
+
+                        <!-- QUALIFICATION 2-->
+                        <div class="qualification__data">
                             <div></div>
                             <div>
                                 <span class="qualification__rounder"></span>
@@ -672,7 +727,7 @@
                                 </span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
-                                    Octubre 2023 - Presente
+                                    Octubre 2023 - Diciembre 2023
                                 </div>
                             </div>
 
