Delete years on skills

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                             <div>
                                 <h1 class="skills__title">Frontend</h1>
-                                <span class="skills__subtitle"> 2 años</span>
+                                <span class="skills__subtitle"> </span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -286,7 +286,7 @@
 
                             <div>
                                 <h1 class="skills__title">Testing y otras tecnologías</h1>
-                                <span class="skills__subtitle"> 2 años</span>
+                                <span class="skills__subtitle"> </span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -412,7 +412,7 @@
 
                             <div>
                                 <h1 class="skills__title">Backend</h1>
-                                <span class="skills__subtitle"> 2 años</span>
+                                <span class="skills__subtitle"> </span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
